# mpi-attributes-pass

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  mem-inst-count.py  mpiattrs-comp  mpiattrs_comp
example/: sample.c
src/: Annotations.def  Bookkeeper.cpp  Bookkeeper.hpp  MPIAnnotationCollective.cpp  MPIAnnotationCollectiveBlocking.cpp  MPIAnnotationCollectiveNonblocking.cpp  MPIAnnotationCollectivePersistent.cpp  MPIAnnotationFunctions.cpp  MPIAnnotationFunctions.hpp  MPIAnnotationOther.cpp  MPIAnnotationPointToPoint.cpp  MPIAttributesPass.cpp  MPIAttributesPass.hpp
test/: list.c  test.c  test2.c  test3.c  test4.c  test5.c  test6.c
test_sample/: sample.c
